[gd_scene load_steps=4 format=2]

[ext_resource path="res://weapons/chain/Chain.gd" type="Script" id=1]
[ext_resource path="res://weapons/chain/graphics/chain_px.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 92.5, 10 )

[node name="Chain" type="Node2D"]
script = ExtResource( 1 )

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 92.5, 0 )
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="AttackArea"]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( 372, 0 )

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
